	-> bug fix: vanishing properties in text tag property editor
	-> new textfield to quickly open a document with a certain id
	-> re-engineer the docking state buttons to quickly show/hide the control or transcription view with one click
	-> remove flickering in transcription widget while typing and scrolling
	-> add "show all lines of a page in the transcription widget" setting (enable via transcription widget toolbar wrench icon)
	-> add possibility to move transcription widget to the right side (enable via corresponding docking state dropdown menu button, i.e. third button on top left)
	-> PDF import: show progress during image extraction
	-> PDF import: path for temporary files is now correctly built in Linux
	-> bug fix: closing export dialog immediately after opening caused an exception (widget disposed)
	-> config.properties logHttp setting: enable to get full INFO level HTTP traffic log in console and log file 
	-> implement scrollbar mode for canvas and set it to default scrolling mode 
	-> convert from tables to simple textregions for all cells without losing lines and their transcriptions (via "Metadata->Structural" tab)
	-> CITlab HTR+ basic integration
	 
1.5.1
	-> bugfix: UI crashed when opening advanced error rate tool and switching page afterwards
	
1.5.2
	-> bugfix: user could not edit last line if empty (index out of bounds exception)

1.5.3
	-> bugfix: nullpointer exception when merging table cells
	-> bugfix: disable automatic bidi processing, which is broken and leads to a program crash, and let the user manually switch between left-to-right and right-to-left orientation
	-> bugfix: fix broken baseline merging when merging lines with words
	-> bugfix: fix broken client side export (update saxon version)
	-> keep zoom when switching between pages
	-> bugfix: unable to add some unicode values to virtual keyboard
	
1.5.4
	-> bugfix: broken image display on Linux systems
	
	